fixed scrollbars on windows

--- a/front-end/styles.css
+++ b/front-end/styles.css
@@ -59,7 +59,7 @@ ul{
     list-style: none;
     display: flex;
     flex-flow: row wrap;
-    overflow: scroll;
+    overflow: auto;
     width: 100%;
 }
 
